--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -50,7 +50,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:id="@+id/ok_button"
+        android:id="@+id/login_button"
         style="@style/ButtonAppTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
