--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,17 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!--Warning Dialog-->
+    <dimen name="dialog_corner_radius">16dp</dimen>
+    <dimen name="warning_dialog_width">300dp</dimen>
+    <dimen name="warning_dialog_height">120dp</dimen>
+    <dimen name="warning_dialog_button_height">40dp</dimen>
+    <dimen name="warning_dialog_message_text_size">16sp</dimen>
+    <dimen name="warning_dialog_button_text_size">18sp</dimen>
+    <dimen name="warning_dialog_divider_size">1dp</dimen>
+    <dimen name="warning_dialog_content_horizontal_padding">10dp</dimen>
+    <dimen name="match_dialog_height">245dp</dimen>
+    <dimen name="match_dialog_content_margin">10dp</dimen>
+    <dimen name="match_dialog_avatar_size">120dp</dimen>
 </resources>
