--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,9 @@
     <dimen name="match_dialog_height">245dp</dimen>
     <dimen name="match_dialog_content_margin">10dp</dimen>
     <dimen name="match_dialog_avatar_size">120dp</dimen>
+
+    <!--TabHome-->
+    <dimen name="tab_item_text_size">16sp</dimen>
+    <!--Tool Bar Home-->
+    <dimen name="tool_bar_item_text_size">48sp</dimen>
 </resources>
