--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,7 +45,7 @@
     </style>
     <!--Style for Login Screen  Button-->
 
-    <style name="ButtonAppTheme" parent="Widget.AppCompat.Button.Colored">
+    <style name="ButtonAppTheme" parent="Widget.AppCompat.Button.Colored">фт
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@drawable/button</item>
 
@@ -56,10 +56,24 @@
         <item name="android:textColor">@color/warning_dialog_message_text</item>
         <item name="android:textSize">@dimen/warning_dialog_message_text_size</item>
     </style>
+
     <style name="WarningDialogButtonStyle">
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/warning_dialog_button_text</item>
         <item name="android:textSize">@dimen/warning_dialog_button_text_size</item>
+    </style>
+
+    <style name="TabHome" parent="AppTheme">
+        <item name="android:textColor">@color/hint_text</item>
+        <item name="android:textSize">@dimen/tab_item_text_size</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+    <style name="ToolBarTheme" parent="AppTheme">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/tab_item_text_size</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">italic</item>
     </style>
 
 </resources>
