--- a/app/src/main/res/layout/fragment_feed_list.xml
+++ b/app/src/main/res/layout/fragment_feed_list.xml
@@ -1,27 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_layout"
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/main_content"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
+            <TextView
+                android:layout_width="258dp"
+                android:layout_height="302dp"
+                android:gravity="center"
+                android:text="In this place will be feed list"/>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/feed_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="feed news items"/>
+
+
+
+        </android.support.v4.widget.SwipeRefreshLayout>
+        <com.melnykov.fab.FloatingActionButton
+            android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="In this place will be feed list"/>
+            android:layout_gravity="bottom|right"
+            android:layout_margin="16dp"
+            fab:fab_shadow="false"
+            fab:elevation="8dp"
+            android:src="@drawable/ic_add_white_24dp"
+            fab:fab_colorNormal="@color/primary"
+            fab:fab_colorPressed="@color/primary_dark"
+            fab:fab_colorRipple="@color/primary_light"/>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/feed_list_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:text="feed news items"/>
-
-
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </android.support.design.widget.CoordinatorLayout>
 </FrameLayout>
