--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- using the "Light Blue" Material Palette -->
-    <color name="primary_dark">#303F9F</color>  <!-- 700 -->
-    <color name="primary">#3F51B5</color>  <!-- 500 -->
-    <color name="primary_light">#C5CAE9</color> <!-- 100 -->
-    <color name="accent">#000000</color>
+
+
+    <!-- using the "Light Blue" Material Palette -->
+    <color name="primary">#03A9F4</color>  <!-- 500 -->
+    <color name="primary_dark">#0288D1</color>  <!-- 700 -->
+    <color name="primary_light">#B3E5FC</color> <!-- 100 -->
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#525252</color>
     <color name="hint_text">#737373</color>
@@ -29,4 +31,8 @@
     <color name="colorTabItemDark">#C2185B</color>
     <color name="colorTabItemAccent">#4CAF50</color>
 
+    <!--Floating Button-->
+    <color name="ripple">#F06292</color>
+    <color name="accent_pressed">#C2185B</color>
+    <color name="accent">#E91E63</color>
 </resources>
