--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,20 +8,26 @@
         <item name="colorAccent">@color/accent</item>
         <item name="toolbarStyle">@style/Toolbar</item>
     </style>
+
     <!--main activity toolbar style-->
 
     <style name="Toolbar" parent="Widget.AppCompat.Toolbar">
         <item name="android:background">?attr/colorPrimary</item>
         <item name="popupTheme">@style/Theme.AppCompat.Light</item>
+        <item name="android:textColorPrimary">@color/white</item>
+
 
     </style>
+
 
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@drawable/background_splash</item>
     </style>
 
-    <style name="AppTheme.Main" parent="AppTheme"/>
+    <style name="AppTheme.Main" parent="AppTheme">
+        <item name="android:textColorPrimary">@android:color/white</item>
+    </style>
 
     <!--Style for  Login Screen TextInputLayout-->
 
@@ -63,17 +69,12 @@
         <item name="android:textSize">@dimen/warning_dialog_button_text_size</item>
     </style>
 
-    <style name="TabHome" parent="AppTheme">
+    <style name="TabHome" parent="AppTheme.Main">
         <item name="android:textColor">@color/hint_text</item>
         <item name="android:textSize">@dimen/tab_item_text_size</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textStyle">normal</item>
     </style>
-    <style name="ToolBarTheme" parent="AppTheme">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">@dimen/tab_item_text_size</item>
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textStyle">italic</item>
-    </style>
+
 
 </resources>
