--- a/app/src/main/res/layout/preference_activity.xml
+++ b/app/src/main/res/layout/preference_activity.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <android.support.design.widget.CoordinatorLayout android:id="@+id/tabs_activity"
                                                  xmlns:android="http://schemas.android.com/apk/res/android"
                                                  xmlns:tools="http://schemas.android.com/tools"
@@ -10,24 +8,20 @@
                                                  xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:animateLayoutChanges="true"
+        app:popupTheme="@style/Toolbar"
+        app:title="@string/preference_toolbar_label"
+        />
 
     <FrameLayout
-        android:id="@+id/fragment_container"
+        android:id="@+id/pref_fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
 
 
 </android.support.design.widget.CoordinatorLayout>
-
-
-
-
-
-
-
-
-
-
-
