--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,27 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<android.support.design.widget.CoordinatorLayout
+    android:id="@+id/profile_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:fab="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
 
 
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:elevation="0dp"
-            android:weightSum="1"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:theme="@style/AppTheme">
+            android:orientation="vertical">
 
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:animateLayoutChanges="true"
+                app:popupTheme="@style/Toolbar">
+
+                <TextView
+                    android:id="@+id/toolbar_title"
+                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/profile_toolbar_label"
+                    android:textColor="@android:color/white"
+                    />
+            </android.support.v7.widget.Toolbar>
 
             <include
                 layout="@layout/profile_header"
@@ -30,32 +47,17 @@
                 />
 
 
-        </android.support.v7.widget.Toolbar>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <com.melnykov.fab.FloatingActionButton
-            android:id="@+id/fab_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|left"
-            android:src="@drawable/ic_edit_black_24dp"
-            fab:elevation="8dp"
-            fab:fab_shadow="false"/>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/grid_feed_list_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="feed news items"/>
 
 
+        </LinearLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/grid_feed_list_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="feed news items"/>
+
     </LinearLayout>
-
-
-
 
     <com.melnykov.fab.FloatingActionButton
         android:id="@+id/fab"
@@ -68,7 +70,5 @@
         fab:fab_colorNormal="@color/primary"
         fab:fab_colorPressed="@color/primary_dark"
         fab:fab_colorRipple="@color/primary_light"
-        fab:fab_shadow="false"/>
-
-
-</FrameLayout>
+        fab:fab_shadow="true"/>
+</android.support.design.widget.CoordinatorLayout>
