--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -4,7 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -19,15 +20,50 @@
             android:animateLayoutChanges="true"
             app:popupTheme="@style/Toolbar">
 
-            <TextView
-                android:id="@+id/toolbar_title"
-                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/edit_profile_toolbar_label"
-                android:textColor="@android:color/white"
-                />
+                android:orientation="horizontal"
+                android:gravity="center_horizontal">
+                <Button
+
+                    android:id="@+id/cancel_button"
+                    style="@style/Toolbar.Button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top|left"
+                    android:layout_marginRight="@dimen/profile_info_horizontal_padding"
+
+                    android:textColor="@android:color/white"
+                    tools:text="@string/cancel_button"
+                    android:elevation="8dp"
+                    />
+
+                <TextView
+                    android:id="@+id/toolbar_title"
+                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/edit_profile_toolbar_label"
+                    android:textColor="@android:color/white"
+                    />
+
+                <Button
+
+                    android:id="@+id/save_button"
+                    style="@style/Toolbar.Button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top|right"
+                    android:layout_marginLeft="@dimen/profile_info_horizontal_padding"
+
+                    android:textColor="@android:color/white"
+                    tools:text="@string/save_button"
+                    android:elevation="8dp"
+                    />
+            </LinearLayout>
+
         </android.support.v7.widget.Toolbar>
 
 
