--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -1,78 +1,58 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:orientation="vertical">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/loginInputLayout"
-        style="@style/Widget.Design.TextInputLayout"
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_height="?attr/actionBarSize"
+        android:animateLayoutChanges="true"
+        app:popupTheme="@style/Toolbar"
         >
 
-        <android.support.v7.widget.AppCompatEditText
-            android:id="@+id/login"
-            android:layout_width="match_parent"
+
+        <TextView
+            android:id="@+id/toolbar_login_title"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="16dp"
-            android:gravity="fill"
-            android:textColor="@color/black"
-            android:hint="@string/login"
+            android:text="@string/lable_toolbar_login_in"
+            android:textColor="@android:color/white"
             />
 
-    </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/passwordInputLayout"
-        style="@style/Widget.Design.TextInputLayout"
+    </android.support.v7.widget.Toolbar>
+
+
+    <include
+        layout="@layout/login_password_input"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        >
-
-        <android.support.v7.widget.AppCompatEditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="16dp"
-            android:gravity="fill"
-            android:textColor="@color/black"
-            android:hint="@string/password"
-            />
-
-    </android.support.design.widget.TextInputLayout>
-
-    <Button
-        android:id="@+id/login_button"
-        style="@style/ButtonAppTheme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="16dp"
-        android:text="@string/ok_button"
-        android:textSize="14sp"
-        />
-
-    <TextView
-        android:id="@+id/sign_up_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="32dp"
-        android:clickable="true"
-        android:text="@string/sign_up_button"
-        android:textColor="@color/secondary_text"
-        android:textSize="20sp"
+        android:layout_height="0dp"
+        android:layout_weight="3"
         />
 
 
+    <include layout="@layout/sign_in_button">
+
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+
+
+    </include>
+    <include layout="@layout/link_reset_screen">
+
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+
+
+    </include>
 </LinearLayout>
