--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_link_margin">4dp</dimen>
 
     <!--Warning Dialog-->
     <dimen name="dialog_corner_radius">16dp</dimen>
@@ -31,4 +32,7 @@
 
     <!--Progress Dialog-->
     <dimen name="progress_progressbar_size">60dp</dimen>
+
+    <!--Button-->
+    <dimen name="button_corner_radius">7dp</dimen>
 </resources>
