--- a/app/src/main/res/layout/login_password_input.xml
+++ b/app/src/main/res/layout/login_password_input.xml
@@ -4,11 +4,7 @@
               android:layout_height="wrap_content"
               android:orientation="vertical">
 
-    <android.support.v4.widget.Space
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        android:layout_width="match_parent"
-       />
+
 
     <include
         layout="@layout/email_input"
@@ -21,7 +17,7 @@
         style="@style/Widget.Design.TextInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:orientation="vertical"
         >
 
         <android.support.v7.widget.AppCompatEditText
@@ -29,19 +25,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/abc_list_item_padding_horizontal_material"
             android:gravity="fill"
             android:hint="@string/password"
             android:textColor="@color/black"
-            />
+            style="@android:style/TextAppearance.Widget.EditText"/>
 
     </android.support.design.widget.TextInputLayout>
 
 
-    <android.support.v4.widget.Space
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        android:layout_width="match_parent"
-        />
+
 
 </LinearLayout>
