--- a/app/src/main/res/layout/email_input.xml
+++ b/app/src/main/res/layout/email_input.xml
@@ -1,29 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/loginInputLayout"
-        style="@style/Widget.Design.TextInputLayout"
+<android.support.design.widget.TextInputLayout
+    android:id="@+id/loginInputLayout"
+    style="@style/Widget.Design.TextInputLayout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+
+    >
+
+    <android.support.v7.widget.AppCompatEditText
+        android:id="@+id/login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_margin="@dimen/abc_list_item_padding_horizontal_material"
+        android:gravity="fill"
+        android:hint="@string/login"
+        android:textColor="@color/black"
+        style="@android:style/TextAppearance.Widget.EditText"/>
 
-        >
-
-        <android.support.v7.widget.AppCompatEditText
-            android:id="@+id/login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="16dp"
-            android:gravity="fill"
-            android:hint="@string/login"
-            android:textColor="@color/black"
-            />
-
-    </android.support.design.widget.TextInputLayout>
-
-</LinearLayout>
+</android.support.design.widget.TextInputLayout>
