--- a/app/src/main/res/layout/link_login_screen.xml
+++ b/app/src/main/res/layout/link_login_screen.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="center"
         android:layout_margin="@dimen/activity_link_margin"
         android:text="@string/lable_already_sign_up"
-        android:textSize="16sp"/>
+        android:textColor="@color/secondary_text"/>
 
     <TextView
         android:id="@+id/login_link"
@@ -25,6 +25,5 @@
         android:contextClickable="true"
         android:text="@string/link_login_screen"
         android:textColor="@drawable/tab_text_link"
-        android:textSize="18sp"
         />
 </LinearLayout>
