--- a/app/src/main/res/layout/link_reset_screen.xml
+++ b/app/src/main/res/layout/link_reset_screen.xml
@@ -7,13 +7,13 @@
         android:orientation="horizontal"
     android:gravity="center">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/lable_reset_password"
-            android:layout_margin="@dimen/activity_link_margin"
-            android:layout_gravity="center"
-            android:textSize="16sp"/>
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/lable_reset_password"-->
+            <!--android:layout_margin="@dimen/activity_link_margin"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:textSize="16sp"/>-->
 
         <TextView
             android:id="@+id/reset_link"
@@ -25,6 +25,5 @@
             android:contextClickable="true"
             android:text="@string/link_reset_password_screen"
             android:textColor="@drawable/tab_text_link"
-            android:textSize="18sp"
             />
     </LinearLayout>
