--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -17,42 +17,44 @@
         >
 
 
-        <TextView
-            android:id="@+id/toolbar_login_title"
-            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/lable_toolbar_login_in"
-            android:textColor="@android:color/white"
-            />
-
+        <!--<TextView-->
+        <!--android:id="@+id/toolbar_login_title"-->
+        <!--style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:text="@string/lable_toolbar_login_in"-->
+        <!--android:textColor="@android:color/white"-->
+        <!--/>-->
+        <include layout="@layout/toolbar_icon"/>
 
     </android.support.v7.widget.Toolbar>
 
+    <ImageView
+        android:id="@+id/user_icon"
+        android:layout_width="@dimen/user_icon"
+        android:layout_height="@dimen/user_icon"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
+        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
+        android:adjustViewBounds="true"
+
+        />
 
     <include
         layout="@layout/login_password_input"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
         android:layout_weight="3"
         />
 
 
     <include layout="@layout/sign_in_button">
-
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
-
-
+        android:layout_weight="0.5"
     </include>
-    <include layout="@layout/link_reset_screen">
-
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
 
 
-    </include>
 </LinearLayout>
