--- a/app/src/main/res/layout/reset_password.xml
+++ b/app/src/main/res/layout/reset_password.xml
@@ -12,50 +12,51 @@
         android:animateLayoutChanges="true"
         app:popupTheme="@style/Toolbar"
         >
+        <include layout="@layout/toolbar_icon"/>
 
-
-        <TextView
-            android:id="@+id/toolbar_forgot_password_title"
-            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/lable_toolbar_forgot_password"
-            android:textColor="@android:color/white"
-            />
-
+        <!--<TextView-->
+        <!--android:id="@+id/toolbar_forgot_password_title"-->
+        <!--style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:text="@string/lable_toolbar_forgot_password"-->
+        <!--android:textColor="@android:color/white"-->
+        <!--/>-->
 
     </android.support.v7.widget.Toolbar>
 
-    <android.support.v4.widget.Space
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
+    <ImageView
+        android:id="@+id/user_icon"
+        android:layout_width="@dimen/user_icon"
+        android:layout_height="@dimen/user_icon"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
+        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
+        android:adjustViewBounds="true"
         />
 
 
     <include
         layout="@layout/email_input"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
-
-    <android.support.v4.widget.Space
-        android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
         android:layout_weight="3"
         />
+
+    <!--<android.support.v4.widget.Space-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="0dp"-->
+    <!--android:layout_weight="3"-->
+    <!--/>-->
 
     <include
         layout="@layout/reset_password_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1.5"
         />
 
-    <android.support.v4.widget.Space
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        />
 
 </LinearLayout>
