--- a/app/src/main/res/layout/sign_up_button.xml
+++ b/app/src/main/res/layout/sign_up_button.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
               android:orientation="vertical"
-    >
-
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content">
 
     <Button
-        android:id="@+id/reset_button"
+        android:id="@+id/sign_up_button"
         style="@style/ButtonAppTheme"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/reset_button"
+        android:text="@string/sign_up_button"
         android:layout_height="0dp"
-        android:layout_weight="0.5"/>
+        android:layout_weight="0.5"
+        android:gravity="center"/>
 
     <include
         layout="@layout/link_login_screen"
@@ -24,11 +22,10 @@
         />
 
     <include
-        layout="@layout/link_sign_up_screen"
+        layout="@layout/link_reset_screen"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.5"
         />
-
 
 </LinearLayout>
