--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -66,19 +66,19 @@
     <style name="AppTheme.TextFloatLabelAppearance" parent="TextAppearance.Design.Hint">
         <!-- Floating label appearance here -->
         <item name="android:textColor">@color/secondary_text</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="AppTheme.TextErrorAppearance" parent="TextAppearance.Design.Error">
         <!-- Error message appearance here -->
         <item name="android:textColor">@color/secondary_text</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">16sp</item>
     </style>
     <!--Style for Login Screen  Button-->
 
     <style name="ButtonAppTheme" parent="Widget.AppCompat.Button.Colored">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:background">@drawable/button</item>
+        <item name="android:textColor">@color/app_black</item>
+        <item name="android:background">@drawable/button_shape</item>
 
     </style>
     <!--Style for warning dialog-->
@@ -105,5 +105,6 @@
         <item name="android:progressBarStyle">?android:attr/progressBarStyleLarge</item>
         <item name="colorAccent">@color/primary</item>
     </style>
+
 
 </resources>
