--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,60 +4,65 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:fab="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/grid_feed_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 
-        <LinearLayout
+    <!--<android.support.design.widget.AppBarLayout-->
+    <!--android:id="@+id/appbar"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--app:layout_anchorGravity="bottom|right|end"-->
+    <!--android:theme="@style/Toolbar.Profile"-->
+    <!--&gt;-->
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+
+            <include layout="@layout/toolbar_icon"
+                     android:fitsSystemWindows="true"
+                     android:scaleType="centerCrop"
+                     app:layout_collapseMode="parallax"/>
+
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:animateLayoutChanges="true"
-                app:popupTheme="@style/Toolbar">
+                android:layout_height="wrap_content"
+                android:background="@android:color/white"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/Toolbar.Profile">
 
-                <TextView
-                    android:id="@+id/toolbar_title"
-                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-                    android:layout_width="wrap_content"
+                <include
+                    layout="@layout/profile_header"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/profile_toolbar_label"
-                    android:textColor="@android:color/white"
                     />
+
             </android.support.v7.widget.Toolbar>
 
-            <include
-                layout="@layout/profile_header"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
+        </android.support.design.widget.CollapsingToolbarLayout>
 
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/grid_feed_list_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:text="feed news items"/>
-
-
-        </LinearLayout>
-
-
-    </LinearLayout>
+    </android.support.design.widget.AppBarLayout>
 
     <com.melnykov.fab.FloatingActionButton
         android:id="@+id/fab"
