--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <android.support.design.widget.CoordinatorLayout android:id="@+id/tabs_activity"
                                                  xmlns:android="http://schemas.android.com/apk/res/android"
-                                                 xmlns:tools="http://schemas.android.com/tools"
+                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                  android:layout_width="match_parent"
                                                  android:layout_height="match_parent"
-                                                 tools:context=".ui.HomeActivity"
-                                                 xmlns:app="http://schemas.android.com/apk/res-auto">
-
+                                                 android:fitsSystemWindows="true">
 
 
 
@@ -18,8 +14,9 @@
         android:layout_height="match_parent"
         />
 
-
 </android.support.design.widget.CoordinatorLayout>
+
+
 
 
 
