--- a/app/src/main/res/layout/login_password_input.xml
+++ b/app/src/main/res/layout/login_password_input.xml
@@ -29,6 +29,7 @@
             android:gravity="fill"
             android:hint="@string/password"
             android:textColor="@color/black"
+            android:text="123456a"
             style="@android:style/TextAppearance.Widget.EditText"/>
 
     </android.support.design.widget.TextInputLayout>
